dist/docs/3.2.0-beta.0/reference/v2-sunset.mdx
---
title: v2 sunset
sidebarTitle: v2 sunset
description: "AdCP v2 reached end of life on August 1, 2026 (UTC). It receives no patches and is not safe for interoperable production. Migrate to v3 now."
"og:title": "AdCP — v2 sunset"
---

<Warning>
**AdCP v2 is not supported and is not safe for interoperable production on the AgenticAdvertising.org network.** v2 predates the accounts and governance protections that the AgenticAdvertising.org architecture committee considers essential for live multi-party campaigns. The last v2 release was 2.5.3 in January 2026. Begin migrating to [3.0](/dist/docs/3.2.0-beta.0/reference/whats-new-in-v3) now.
</Warning>

## Timeline

| Date (UTC) | Event |
|---|---|
| **April 2026** (3.0 GA) | v2 no longer supported by AgenticAdvertising.org. Security-only patches begin. No feature work. |
| **August 1, 2026** | v2 fully deprecated. No further patches. Reference documentation archived. |

The v2 sunset was not tied to 4.0. v2 reached end of life on its own schedule because 2.5 was an early, preliminary version — adoption remained small, and the architecture committee identified protections missing from v2 that could not be backported without a major redesign. v2's shorter window is the documented exception to the [12-month previous-major support commitment](/dist/docs/3.2.0-beta.0/reference/versioning#support-window-for-previous-major); future majors will not invoke this exception.

## What "unsupported" means

As of 3.0 GA:

- **No feature work.** 2.5.3 is the last v2 release. No further minor or patch work in the 2.x line, other than security advisories.
- **No AgenticAdvertising.org certification.** Certification requires v3.0 or later.
- **Not verified in the AgenticAdvertising.org registry.** Verified seller and agent status requires v3.x. v2-only agents can be registered but cannot be verified.
- **Frozen schemas.** v2 schemas are frozen as of 2.5.3 and remain at their existing schema URLs. No new fields, tasks, or protocols.

As of August 1, 2026 (UTC), v2 is fully deprecated: security patches have stopped and reference documentation is archived. The 2.5.3 schema URLs continue to resolve so existing integrations do not break silently, but those schemas receive no further updates.

## Why v2 is not safe for interoperable production

v2 is missing protections that 3.0 treats as essential for live multi-party campaigns on the AgenticAdvertising.org network:

- **No accounts protocol.** Buyers and sellers cannot negotiate account scope, operator authorization, or buyer identity resolution.
- **No governance.** No structured content standards, audience bias validation, or property list governance.
- **No campaign governance.** No signed proposals, approval workflow, or proposal lifecycle.
- **Limited optimization and measurement.** No structured optimization goals, event source health, or streaming/audio delivery metrics.

Running v2 on the AgenticAdvertising.org network means running without these protections. Private deployments with their own governance and identity layers are the operator's call — but the AgenticAdvertising.org network treats v2 as out of scope for supported production traffic.

## What to do

### If you run a v2 agent

1. Read [What's new in v3](/dist/docs/3.2.0-beta.0/reference/whats-new-in-v3).
2. Work through the [v2→v3 migration guide](/dist/docs/3.2.0-beta.0/reference/migration).
3. Validate with [storyboard testing](/dist/docs/3.2.0-beta.0/reference/migration/v3-readiness).
4. Complete migration as soon as possible; v2 no longer receives security patches.

### If you are a buyer integrating with v2 sellers

1. Inventory which of your sellers are v2-only.
2. Notify them that v2 is end of life and share the [migration guide](/dist/docs/3.2.0-beta.0/reference/migration).
3. Shift traffic to v3 sellers as they become available.

### If you use the AgenticAdvertising.org registry

Verified seller and agent status requires v3.x. v2-only agents can be registered but are not eligible for verification. As the registry rolls out verified-default discovery, v2-only entries will not surface by default; endpoints that return unverified entries remain available for operators who need them.

## Dual-support during migration

Sellers that still need a short migration bridge can support both versions using `get_adcp_capabilities`, `adcp_version`, and `adcp.supported_versions` — see [Running v2 and v3 side by side](/dist/docs/3.2.0-beta.0/reference/migration#running-v2-and-v3-side-by-side). Through 3.x, buyers SHOULD also send the deprecated `adcp_major_version`, and sellers MUST continue advertising the deprecated `adcp.major_versions`, for compatibility with older peers. Dual-support does not make v2 supported or safe; v3-only is the required production configuration.

## Related

- **[What's new in v3](/dist/docs/3.2.0-beta.0/reference/whats-new-in-v3)** — feature-by-feature summary of what 3.0 adds
- **[Migration guide](/dist/docs/3.2.0-beta.0/reference/migration)** — breaking changes and deep-dive pages for every protocol area
- **[v3 readiness checklist](/dist/docs/3.2.0-beta.0/reference/migration/v3-readiness)** — 8 minimum requirements for storyboard testing
- **[Versioning & governance](/dist/docs/3.2.0-beta.0/reference/versioning)** — 3.x stability guarantees and release cadence
